--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner-010.jpg')">
 		<div class="heading">
 			<h1>Hi I'm kareem</h1>
-			<p>"A passionate, fast leaner CS graduate from Egypt, <br>Seeks to live in peace."</p>
+			<p>"A passionate, fast leaner CS graduate from Egypt, <br>Seeks learning something new."</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>Can introduced my self as </span>
 				<span class="cd-words-wrapper"> 
