--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About Us</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
@@ -125,7 +125,7 @@
                             Committed to continuous learning and staying up-to-date with the latest trends and best practices in network security, 
                             cybersecurity, and Linux system administration.</p>
 
-                        <a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
+                        
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
