--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="uploads/about_04.jpeg" alt="" class="img-fluid img-rounded">
+                        <img src="uploads/222.jpg" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
